Fix contrast ratio color

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,7 +8,7 @@
 $color-white:       #fff;
 $color-grey-lighter:#f7f7f8;
 $color-grey-light:  #ccc;
-$color-grey:        #8f8f8f;
+$color-grey:        #727272;
 $color-grey-dark:   #414141;
 $color-red:         #e02d54;
 
